@@ -3,7 +3,6 @@ Current {
 
 Backlog {
 	* Raygui
-		* GuiToggleSlider.
 		* ICON_ defines.
 	* Raygui lib
 		* Check if could remove flickering from changing draw order by making queue for order
